Version 0.9.2 (changes from aircrack-ng 0.9.1) - Released ?? ??? 2007:
* airodump-ng: Fixed: Wrong information printed in CSV file (PSK for WEP with Shared key instead of SKA).
* airdecap-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
* airmon-ng: Fixed detection of N770 wireless interface
* Makefiles: Fixed OpenBSD makefile.

Version 0.9.1 (changes from aircrack-ng 0.9) - Released 25 june 2007:
* airodump-ng: wlan-ng driver now works again.
* airodump-ng: Fixed IP address when writing to CSV file
* airodump-ng: Fixed debian bug #417388: it doesn't restore terminal after error
* aircrack-ng: Fixed WPA cracking on SMP computers
* aircrack-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
* airmon-ng: Fixed madwifi-ng wifiX detection (due to translation in ifconfig)
* patches: Added ACX injection patch
* patches: Updated rtl8187 patch for 2.6.21
* GUI (win): Added PTW option to aircrack-ng tab.
* GUI (win): Fixed a bug when cracking with a wordlist.

Version 0.9 (changes from aircrack-ng 0.8) - Released 13 May 2007:
* aireplay-ng: Added new 'attack': injection test (--test)
* aireplay-ng: disallow injection with wlanng & kernel > 2.6.11
* airtun-ng: Fixed: an option wasn't shown in usage screen.
* airodump-ng (win): Fixed version numbering.
* airodump-ng (win): Changed first time messagebox
* aircrack-ng: Fixed: --help make aircrack-ng crash
* aircrack-ng: Added PTW attack (option: -z). It require full capture.
* airdecap-ng: now decrypt IEEE802.11 header with 802.11e header
* airmon-ng: Fixed orinoco card detection
* patches: updated zd1211rw patch for kernel 2.6.21
* patches: Added bcm43xx injection patch for kernel 2.6.20
* patches: updated rtl8187 patch (for new driver version).
* wzcook (win): now can work in silent mode (option: --silent)
* Makefile: added make zip (cygwin only)
* Makefile: fixed direct call to 'make install' or 'make strip' instead of 'make'
* GUI (win): Updated aircrack-ng tab and added an about tab.
